--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "babel-plugin-macros": "^2.8.0",
     "jest-webpack": "^0.5.1",
     "react-test-renderer": "^16.13.1"
   }
